--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,8 +1,12 @@
-version: '3'
+version: '3.0'
 
 services:
-  prock.host:
-    image: prockhost
+  prock.sample:
+    image: procksample
     build:
       context: .
       dockerfile: src/Prock.Sample/Dockerfile
+    environment:
+      - ASPNETCORE_ENVIRONMENT=Development
+    ports:
+      - "80"
